[package]
name = "tifs"
version = "0.1.0"
authors = ["hexilee <i@hexilee.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
futures = "0.3"
anyhow = "1.0"
fuser = { git = "https://github.com/cberner/fuser.git" , default-features = false, features = ["serializable", "abi-7-30"] }
libc = "0.2"
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2"
async-trait = "0.1"
tikv-client = { git = "https://github.com/tikv/client-rust.git" }
serde = { version = "1", features = ["derive"] }
clap = "2.32"
lru = "0.6"
slab = "0.4.2"

serde_json = { version = "1", optional = true }
bincode = { version = "1.3.1", optional = true }

paste = "1.0"

[features]
default = ["json"]

binc = ["bincode"]
json = ["serde_json"]


